# interview_test

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: aws_discount_cheatsheet.md  data_dictionary.md  understanding_debt.md  understanding_ledger.md
docs/challenges/: README.md  audit_commitments.md  baseline_realized_savings.md  commitment_basket.md  coverage_utilization_frontier.md  effective_savings_rate.md  explain_the_anomaly.md  forecast_and_commit.md  optimal_commitment.md  window_sensitivity.md
notebooks/: demo.ipynb
output/challenge_00/: methodology.md  metrics.json  summary.md  understanding_ledger.md
output/challenge_01/: methodology.md  metrics.json  summary.md  understanding_ledger.md
pipeline/: _index.md  challenge_00_data_readiness.py  challenge_01_effective_savings_rate.py  challenge_02_optimal_commitment.py  challenge_03_window_sensitivity.py  challenge_04_baseline_realized_savings.py  challenge_05_audit_commitments.py  challenge_06_coverage_utilization_frontier.py
src/: __init__.py  _index.md  challenge_00.py  challenge_00_diagnostics.py  challenge_00_duplicates.py  challenge_01.py  challenge_02.py  challenge_03.py  challenge_04.py  challenge_05.py  challenge_06.py  commitments.py  cost_data.py  data_quality.py  metrics.py
tests/: test_commitments.py  test_data_quality.py  test_metrics.py  test_pipeline_challenge_00.py  test_pipeline_challenge_01.py  test_pipeline_challenge_02.py  test_pipeline_challenge_03.py  test_pipeline_challenge_04.py  test_pipeline_challenge_05.py  test_pipeline_challenge_06.py  test_pipeline_smoke.py
(+68 files in other folders)
